main_app/static/css/style.css
/* ... */
/*-------------------------------------------------------------------------*/
/*-------------------------- Home Page ------------------------------------*/
/*-------------------------------------------------------------------------*/

.home-text-box {
  display: flex;
  flex-direction: column;
  position: relative;
  /* position: absolute; */
  margin: 3%;
  padding: 1%;
  box-sizing: border-box;
  height: 3.5rem;
  width: 6.5rem;
  z-index: 5;
  align-items: left;
  justify-content: center;
  box-sizing: border-box;
  padding: 1%;
}

#home-header {
  display: flex;
  margin: 1%;
  /* position: absolute; */
  font-family: 'Helvetica Neue';
  font-style: normal;
  font-weight: 700;
  font-size: 0.52rem;
  line-height: 0.63rem;
  color: #C79CE0;
}

#home-text {
  display: flex;
  /* position: absolute; */
  margin: 1% 44% 1% 1%;
  font-family: 'Helvetica Neue';
  font-style: normal;
  font-weight: 400;
  font-size: 0.22rem;
  line-height: 0.24rem;
  color: #000000;
}

#main-button {
  display: flex;
  margin: 7% 7% 7% 1%;
  /* position: absolute; */
  /* flex-direction: row; */
  justify-content: center;
  align-items: center;
  padding: 0.2rem;
  gap: 0.08rem;
  width: 1.42rem;
  height: 0.48rem;
  /* left: calc(50% - 142px/2 - 514px);
  top: 625px; */
  background: #C79CE0;
  color:white;
  border-radius: 0.2rem;
  font-size: 0.18rem;
  line-height: 0.24rem;
  letter-spacing: 0.01rem;
  font-feature-settings: 'pnum' on, 'lnum' on;
  filter: drop-shadow(0.06rem 0.05rem 0.05rem rgba(0, 0, 0, 0.3));
  border: 0;
}

/*-------------------------------------------------------------------------*/
/*-------------------------- About Page -----------------------------------*/
/*-------------------------------------------------------------------------*/

.about-container {
  display: flex;
  flex-direction: row;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  overflow-x: hidden;  

  /* background-color: lightgray; */
}

#left-about-container {
  display: flex;
  position: relative;
  flex-direction: column;
  align-items: left;
  flex: 0 0 70%;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 2;
  
  /* background-color: lightslategray; */
}

#right-about-container {
  display: flex;
  position: relative;
  justify-content: center;
  align-items: center;
  flex: 0 0 30%;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;

  /* background-color: lightgreen; */
}

#top-text-box {
  display: flex;
  flex-direction: column;
  flex: 0 0 30%;
  align-items: left;
  margin: 2% 6% 2% 6%;

  /* background-color: blue; */
}

#about-header {
  font-style: normal;
  font-family: 'Helvetica Neue';
  font-weight: 700;
  color: #C79CE0;
  font-size: 0.44rem;
  z-index: 1;

  /* background-color: red; */
}

#about-text {
  font-style: normal;
  font-family: 'Helvetica Neue';
  font-weight: 400;
  color: #000000;
  font-size: 0.22rem;
  line-height: 0.24rem;
  padding: 0% 30% 0% 0%;
  z-index: 1;

  /* background-color: yellowgreen; */
}

#middle-text-box {
  display: flex;
  flex-direction: column;
  align-items: left;
  margin: 0% 0% 0% 6%;
  flex: 0 0 15%;
  flex-grow: 1;

  /* background-color: blue; */
}

#team-header {
  font-style: normal;
  font-family: 'Helvetica Neue';
  font-weight: 700;
  color: #C79CE0;
  font-size: 0.44rem;
  z-index: 1;

  /* background-color: red; */
}

#team-text {
  font-style: normal;
  font-family: 'Helvetica Neue';
  font-weight: 400;
  color: #000000;
  font-size: 0.22rem;
  line-height: 0.24rem;
  z-index: 1;
  margin-right: 5%;

  /* background-color: yellowgreen; */
}

#members {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  box-sizing: border-box;
  flex-wrap: wrap;
  max-width: 8.22rem;
  margin: 0% 6% 0% 6%;
  flex-grow: 1;
  
  /* background-color: lightgreen; */
}

#mobile-box {
  display: flex;
  flex-direction: column;
  justify-content: space-between;

  /* background-color: red; */
}

.members-container {
  display: flex;
  flex-direction: column;
  margin: 0.5% 0% 0.5% 0%;
  max-height: 100%;
  max-width: 100%;

  /* background-color: lightskyblue; */
}

.profile-pic {
  border: 0.02rem solid #C79CE0;;
  border-radius: 0.1rem;
  width: 2.02rem;
  height: 2.06rem;
  z-index: 1;
}

.member-links {
  width: 1.91rem;
  border: 0.02rem solid #C79CE0;;
  border-radius: 0.1rem;
  padding: 2.5%;
  justify-content: space-between;
  align-items: center;
  display: flex;
  flex-direction: row;
  font-family: 'Helvetica Neue';
  font-style: normal;
  font-size: 0.19rem;
  line-height: 0.24rem;

  /* background-color: yellow; */
}

.member-links > img {
  width: 0.4rem;
  height: 0.4rem;
}

.member-links span {
  font-family: 'Helvetica Neue';
  font-style: normal;
  font-weight: 700;
  color: #C79CE0;
  font-size: 0.19rem;
  line-height: 0.24rem;
}

/* --------------------------------------- */

#about-phone-bubble-box {
  display: flex;
  position: relative;
  width: 2rem;
  height: 2rem;
}

/* Top */
#pink-circle {
  position: absolute;
  width: 6.4rem;
  height: 6.4rem;
  left: 5%;
  top: -90%;
  background: linear-gradient(180deg, #EBA0C9 0%, rgba(235, 160, 201, 0.765543) 2.48%, rgba(235, 160, 201, 0) 77.43%);
  box-shadow: inset 0.1rem 0.1rem 0.1rem rgba(0, 0, 0, 0.25);
  border-radius: 50%;
}

/* Bottom right */
#purple-circle {
  position: absolute;
  width: 6.4rem;
  height: 6.4rem;
  left: -35%;
  top: 70%;
  background: linear-gradient(220.89deg, #C79CE0 23.2%, rgba(199, 156, 224, 0.458333) 49.34%, rgba(199, 156, 224, 0) 89.82%);
  box-shadow: inset 0.1rem 0.1rem 0.1rem rgba(0, 0, 0, 0.25);
  border-radius: 50%;
}

/* Bottom left */
#blue-circle {
  position: absolute;
  width: 5.4rem;
  height: 5.4rem;
  left: -135%;
  top: 30%;
  background: linear-gradient(182.16deg, #D0EBFD 1.82%, rgba(208, 235, 253, 0) 98.3%);
  box-shadow: inset 0.1rem 0.1rem 0.1rem rgba(0, 0, 0, 0.25);
  border-radius: 50%;
}
/* ... */

